--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,9 +44,15 @@
        </widget>
       </item>
       <item>
-       <widget class="QToolButton" name="toolButton">
+       <widget class="QToolButton" name="markingButton">
         <property name="text">
          <string>...</string>
+        </property>
+        <property name="popupMode">
+         <enum>QToolButton::MenuButtonPopup</enum>
+        </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonTextBesideIcon</enum>
         </property>
        </widget>
       </item>
@@ -82,6 +88,12 @@
           <height>0</height>
          </size>
         </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>320</height>
+         </size>
+        </property>
         <property name="title">
          <string>Compare By</string>
         </property>
@@ -89,27 +101,10 @@
          <set>Qt::AlignCenter</set>
         </property>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QRadioButton" name="radioButton_3">
-           <property name="text">
-            <string>&amp;Size</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
          <item row="3" column="0">
           <widget class="QRadioButton" name="radioButton_6">
            <property name="text">
             <string>Rad&amp;ioButton</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QRadioButton" name="radioButton_5">
-           <property name="text">
-            <string>R&amp;adioButton</string>
            </property>
           </widget>
          </item>
@@ -120,54 +115,284 @@
            </property>
           </widget>
          </item>
+         <item row="4" column="0">
+          <widget class="QRadioButton" name="radioButton_5">
+           <property name="text">
+            <string>R&amp;adioButton</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QRadioButton" name="radioButton_3">
+           <property name="text">
+            <string>&amp;Size</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QTabWidget" name="tabWidget">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>320</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
-        <widget class="QWidget" name="tab">
+        <widget class="QWidget" name="searchLocationsTab">
          <attribute name="title">
-          <string>Tab 1</string>
+          <string>Search Locations</string>
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QListWidget" name="listWidget"/>
+           <widget class="QListWidget" name="listWidget">
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
+            </property>
+            <property name="selectionRectVisible">
+             <bool>true</bool>
+            </property>
+            <item>
+             <property name="text">
+              <string>/mnt/data/jedi/Tamta/tests/</string>
+             </property>
+            </item>
+           </widget>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
-             <widget class="QCommandLinkButton" name="commandLinkButton">
+             <widget class="QPushButton" name="searchLocationAddPathButton">
               <property name="text">
-               <string>CommandLinkButton</string>
+               <string>Add Path</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="searchLocationRemovePathButton">
               <property name="text">
-               <string>PushButton</string>
+               <string>Remove Selected</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QToolButton" name="toolButton_2">
+             <widget class="QPushButton" name="searchLocationClearAll">
               <property name="text">
-               <string>...</string>
+               <string>Clear All</string>
               </property>
              </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Filters</string>
+         </attribute>
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="2" column="0">
+           <widget class="QComboBox" name="comboBox">
+            <item>
+             <property name="text">
+              <string>All Files | *.*</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Images | *.jpg, *.jpeg, *.png, *.tiff, *.bmp</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="9" column="0">
+           <widget class="QCheckBox" name="checkBox">
+            <property name="text">
+             <string>Protect System Files (*.dll, *.sys, *.ocx, *.drv, *.dat)</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="0">
+           <widget class="QCheckBox" name="checkBox_2">
+            <property name="text">
+             <string>Include Hidden Files and Folders</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="0">
+           <widget class="QCheckBox" name="checkBox_3">
+            <property name="text">
+             <string>Protect System Folders</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QWidget" name="widget" native="true">
+            <layout class="QGridLayout" name="gridLayout_3">
+             <item row="1" column="2">
+              <widget class="QDateEdit" name="dateEdit_2"/>
+             </item>
+             <item row="1" column="8">
+              <spacer name="horizontalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="0" column="4">
+              <widget class="QCheckBox" name="checkBox_5">
+               <property name="text">
+                <string>File Size Range</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="6">
+              <widget class="QSpinBox" name="spinBox_2">
+               <property name="maximum">
+                <number>10000</number>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="4">
+              <widget class="QSpinBox" name="spinBox">
+               <property name="maximum">
+                <number>10000</number>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="5">
+              <widget class="QLabel" name="label_3">
+               <property name="text">
+                <string>--</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="7">
+              <widget class="QComboBox" name="comboBox_2">
+               <item>
+                <property name="text">
+                 <string>B</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>KB</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>MB</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>GB</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="1" column="3">
+              <spacer name="horizontalSpacer_4">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="0" column="0">
+              <widget class="QCheckBox" name="checkBox_4">
+               <property name="text">
+                <string>File Modified Date Range</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QDateEdit" name="dateEdit"/>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLabel" name="label_2">
+               <property name="text">
+                <string> --</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Set Filters</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="FileMask">
+            <property name="text">
+             <string>File Mask</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
         <widget class="QWidget" name="tab_2">
          <attribute name="title">
-          <string>Tab 2</string>
+          <string>Exclusions</string>
          </attribute>
-         <layout class="QGridLayout" name="gridLayout_2"/>
+        </widget>
+        <widget class="QWidget" name="tab_3">
+         <attribute name="title">
+          <string>Protect Folders</string>
+         </attribute>
+        </widget>
+        <widget class="QWidget" name="resultPreviewTab">
+         <attribute name="title">
+          <string>Preview</string>
+         </attribute>
+         <layout class="QGridLayout" name="resultPreviewTabLayout"/>
         </widget>
        </widget>
       </item>
@@ -180,50 +405,66 @@
       </property>
       <widget class="QWidget" name="operationsResultTab">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string>Result List</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QTableWidget" name="tableWidget">
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
+          <property name="showGrid">
+           <bool>true</bool>
+          </property>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string/>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>Group</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>File Size Byte</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>File Size Mixed</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>File Name</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>Ext</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>Новый столбец</string>
+            <string>Create Date</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Modifed Date</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Full Path</string>
            </property>
           </column>
          </widget>
@@ -232,7 +473,7 @@
       </widget>
       <widget class="QWidget" name="operationProcessingTab">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Progress</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
@@ -358,6 +599,27 @@
    </property>
    <property name="menuRole">
     <enum>QAction::AboutQtRole</enum>
+   </property>
+  </action>
+  <action name="actionClearSelection">
+   <property name="text">
+    <string>clearSelection</string>
+   </property>
+   <property name="toolTip">
+    <string>clearSelection</string>
+   </property>
+  </action>
+  <action name="actionInvertSelection">
+   <property name="text">
+    <string>invertSelection</string>
+   </property>
+   <property name="toolTip">
+    <string>invertSelection</string>
+   </property>
+  </action>
+  <action name="actionSelectByPath">
+   <property name="text">
+    <string>selectByPath</string>
    </property>
   </action>
  </widget>
