--- a/previewwidgetweb.ui
+++ b/previewwidgetweb.ui
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FoundItemWebWidget</class>
- <widget class="QWidget" name="FoundItemWebWidget">
+ <class>PreviewWidgetWeb</class>
+ <widget class="QWidget" name="PreviewWidgetWeb">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>300</height>
+    <width>236</width>
+    <height>251</height>
    </rect>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>300</width>
-    <height>300</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
